nb packages + moyenne attribut config file avec chemin du projet